// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Create User Controller Snapshot Test for create user with OTP verification 1`] = `
{
  "body": {
    "data": {
      "userId": "mocked-user-id",
    },
    "message": "Verification OTP sended to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create User Controller Snapshot Test for delete expired unverified user and create new one 1`] = `
{
  "body": {
    "data": {
      "userId": "mocked-user-id",
    },
    "message": "Verification link sended to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create User Controller Snapshot Test for email already exist. 1`] = `
{
  "body": {
    "message": "Looks like someone already registered with that username or email.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create User Controller Snapshot Test for empty request body. 1`] = `
{
  "body": {
    "message": "Request body is required",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create User Controller Snapshot Test for handle email sending failure 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while saving new user.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create User Controller Snapshot Test for missing fields. 1`] = `
{
  "body": {
    "message": "Please fill all data correctly.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create User Controller Snapshot Test for password mismatch. 1`] = `
{
  "body": {
    "message": "Oops! Your passwords don't match.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Create User Controller Snapshot Test for send verification link in email 1`] = `
{
  "body": {
    "data": {
      "userId": "mocked-user-id",
    },
    "message": "Verification link sended to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create User Controller Snapshot Test for server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while saving new user.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create User Controller Snapshot Test for set verifyTokenExpires and destroyDataAfter 1`] = `
{
  "body": {
    "data": {
      "userId": "mocked-user-id",
    },
    "message": "Verification link sended to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create User Controller Snapshot Test for user created successfully. 1`] = `
{
  "body": {
    "data": {
      "userId": "mocked-user-id",
    },
    "message": "Verification link sended to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Create User Controller Snapshot Test for user saving failed. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while saving new user.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Create User Controller Snapshot Test for username already exist. 1`] = `
{
  "body": {
    "message": "Looks like someone already registered with that username or email.",
    "success": false,
  },
  "status": 400,
}
`;
